--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="_3mnt">3 menit</string>
     <string name="message">Message</string>
     <string name="title_activity_maps">Map</string>
+    <string name="nama_driver">driver name</string>
 </resources>
